add_library(pdfium_core_fpdfapi_page OBJECT EXCLUDE_FROM_ALL
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_allstates.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_allstates.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_annotcontext.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_annotcontext.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_basedcs.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_basedcs.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_clippath.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_clippath.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_color.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_color.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_colorspace.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_colorspace.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_colorstate.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_colorstate.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentmarkitem.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentmarkitem.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentmarks.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentmarks.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentparser.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_contentparser.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_devicecs.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_devicecs.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_dib.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_dib.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_docpagedata.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_docpagedata.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_expintfunc.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_expintfunc.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_form.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_form.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_formobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_formobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_function.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_function.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_generalstate.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_generalstate.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_graphicstates.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_graphicstates.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_iccprofile.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_iccprofile.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_image.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_image.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_imageobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_imageobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_meshstream.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_meshstream.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_occontext.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_occontext.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_page.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_page.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pagemodule.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pagemodule.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pageobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pageobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pageobjectholder.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pageobjectholder.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_path.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_path.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pathobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pathobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pattern.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_pattern.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_patterncs.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_patterncs.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_psengine.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_psengine.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_psfunc.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_psfunc.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_sampledfunc.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_sampledfunc.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_shadingobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_shadingobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_shadingpattern.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_shadingpattern.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_stitchfunc.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_stitchfunc.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_streamcontentparser.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_streamcontentparser.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_streamparser.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_streamparser.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_textobject.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_textobject.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_textstate.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_textstate.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_tilingpattern.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_tilingpattern.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transferfunc.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transferfunc.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transferfuncdib.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transferfuncdib.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transparency.cpp"
    "${PDFIUM_ROOT}/core/fpdfapi/page/cpdf_transparency.h"
    "${PDFIUM_ROOT}/core/fpdfapi/page/ipdf_page.h"
)
add_library(pdfium::core_fpdfapi_page ALIAS pdfium_core_fpdfapi_page)
target_link_libraries(pdfium_core_fpdfapi_page
    PRIVATE
        pdfium::strict_config
    PUBLIC
        pdfium::constants
        pdfium::core_fdrm
        pdfium::core_fxcodec
        pdfium::core_fxcrt
        pdfium::core_fpdfapi_font
        pdfium::core_fpdfapi_parser
)
